Bug 1750850. Remove the code that tracks "active layers" from changes made in scroll handlers. r=mstange

This was added in bug 1201330 but with WR isn't really needed anymore and the code causes the expiration timer to fire until the scroll frame becomes inactive (the most common scroll frames stay active, ie root scroll frames).

Differential Revision: https://phabricator.services.mozilla.com/D136806